fix image distortion for tile

--- a/app/app_sitelette/sitefiles/css/tiles_style.css
+++ b/app/app_sitelette/sitefiles/css/tiles_style.css
@@ -97,7 +97,6 @@
 }
 
 .tile .body .img-container img {
-	height: 100%;
 	max-width: 100%;
 }
 
